--- a/Nihongo Nexus/src/main/resources/templates/auth.html
+++ b/Nihongo Nexus/src/main/resources/templates/auth.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Authentication | Nihongo Nexus</title>
     <link rel="stylesheet" href=/css/main-styles.css>
+    <link rel="stylesheet" href=/css/font.css>
 </head>
 <body>
-<div class="auth-container">
-    <h1>Nihongo Nexus</h1>
-    <form action="/login" method="POST">
+<div class="auth-container login-window">
+    <label class=".f">Nihongo Nexus</label>
+    <form action="/login" method="POST" class="">
         <div class="input-group">
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required>
