Changes in the layout and authorization styles

--- a/Nihongo Nexus/src/main/resources/templates/auth.html
+++ b/Nihongo Nexus/src/main/resources/templates/auth.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="auth-container login-window">
-    <label class=".f">Nihongo Nexus</label>
+    <label class="f1">Nihongo Nexus</label>
     <form action="/login" method="POST" class="">
         <div class="input-group">
             <label for="username">Username</label>
