--- a/Nihongo Nexus/src/main/resources/static/css/font.css
+++ b/Nihongo Nexus/src/main/resources/static/css/font.css
@@ -4,3 +4,10 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'Psy';
+    src: url('/fonts/PsyType.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
