--- a/Nihongo Nexus/src/main/resources/static/css/main-styles.css
+++ b/Nihongo Nexus/src/main/resources/static/css/main-styles.css
@@ -5,9 +5,8 @@
 }
 
 body {
-    font-family: 'Arial', sans-serif;
-    background-image: url("/img/background/back_login.png");
-    background-image: url("/img/background/back_login.png");
+    font-family: 'Psy', sans-serif;
+    background-image: url("/img/background/back_login_v0.0.1.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -16,16 +15,6 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-}
-
-.auth-container {
-    background-color: #ffffff;
-    padding: 2rem;
-    border-radius: 8px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    width: 100%;
-    max-width: 400px;
 }
 
 h1 {
@@ -52,12 +41,26 @@ label {
     font-family: 'Akris';
 }
 
-.f {
-    font-size: 2rem;
+.f1 {
+    font-size: 3rem;
     margin-bottom: 1.5rem;
     font-family: 'Akris', sans-serif;
     color: #ffffff;
     text-shadow: 2px 1px 13px #007feb, -20px 8px 0px #1b4e7e, 20px 16px 0px #183f6c, 20px -17px 0px #628EBA;
+}
+
+.f2 {
+    font-size: 2.5rem;
+    margin-bottom: 1.5rem;
+    font-family: 'Akris', sans-serif;
+    color: #ffffff;
+}
+
+.f3 {
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+    font-family: 'Akris', sans-serif;
+    color: #ffffff;
 }
 
 input {
@@ -65,7 +68,7 @@ input {
     padding: 0.8rem;
     font-size: 1rem;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-: 4px;
 }
 
 input:focus {
@@ -79,7 +82,7 @@ input:focus {
     background-color: #007bff;
     color: white;
     border: none;
-    border-radius: 4px;
+    border-: 4px;
     font-size: 1rem;
     cursor: pointer;
 }
@@ -103,13 +106,14 @@ a:hover {
 }
 
 .login-window {
-    background: rgba(20, 29, 43, 0.8); /* Полупрозрачный темный фон */
-    border: 1px solid rgba(116, 183, 210, 0.3); /* Полупрозрачная неоновая рамка */
-    border-radius: 10px;
-    padding: 20px;
-    width: 400px;
+    background: rgb(24 41 61 / 35%);
+    border: 1px solid rgb(134 198 211 / 32%);
+    max-width: 500px;
+    max-height: 700px;
     margin: 100px auto;
-    box-shadow: 0 0 15px 5px rgba(116, 183, 210, 0.2); /* Неоновая тень */
+    box-shadow: 1px 20px 20px 3px rgb(2 57 79 / 77%);
+    padding: 2rem;
+    text-align: center;
 }
 
 .login-window input[type="text"],
@@ -121,25 +125,23 @@ a:hover {
     border: none;
     border-bottom: 2px solid #74B7D2;
     color: #BAADC1;
-    border-radius: 5px;
     font-size: 16px;
 }
 
 .login-window button {
     width: 100%;
     padding: 10px;
-    background-color: #497BA4; /* Кнопка с контрастным цветом */
-    border: none;
+    background-color: #497ba44d;
+    border: 1px solid #19527d;
     color: white;
-    border-radius: 5px;
     font-size: 16px;
     cursor: pointer;
-    transition: 0.3s;
+    transition: 1s;
 }
 
 .login-window button:hover {
-    background-color: #74B7D2; /* Светлый оттенок при наведении */
-    box-shadow: 0 0 10px rgba(116, 183, 210, 0.8); /* Неоновая тень */
+    background-color: #1e6e8dba;
+    box-shadow: 0 0 10px 0px rgb(7 82 113);
 }
 
 .login-window h2 {
