--- a/Nihongo Nexus/src/main/resources/static/css/font.css
+++ b/Nihongo Nexus/src/main/resources/static/css/font.css
@@ -11,3 +11,38 @@
     font-weight: normal;
     font-style: normal;
 }
+
+.f1 {
+    font-size: 3rem;
+    margin-bottom: 1.5rem;
+    font-family: 'Akris', sans-serif;
+    color: #ffffff;
+}
+
+.f2 {
+    font-size: 2.5rem;
+    margin-bottom: 1.5rem;
+    font-family: 'Akris', sans-serif;
+    color: #ffffff;
+}
+
+.f3 {
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+    font-family: 'Akris', sans-serif;
+    color: #ffffff;
+}
+
+.f4 {
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
+    font-family: 'Akris', sans-serif;
+    color: #ffffff;
+}
+
+.f5 {
+    font-size: 1rem;
+    margin-bottom: 1.5rem;
+    font-family: 'Akris', sans-serif;
+    color: #ffffff;
+}
