--- a/Nihongo Nexus/src/main/resources/templates/auth.html
+++ b/Nihongo Nexus/src/main/resources/templates/auth.html
@@ -12,31 +12,33 @@
 </head>
 <body>
 
-<div class="login-page">
-    <div class="logo-comp">
-        <label class="f1">Nexora</label>
-    </div>
+<div class="parent_container">
+    <div class="login-page">
+        <div class="logo-comp">
+            <label class="f1">Nexora</label>
+        </div>
 
-    <div class="auth-container login-window">
-        <label class="logo">Nihongo Nexus</label>
+        <div class="auth-container login-window">
+            <label class="logo">Nihongo Nexus</label>
 
-        <form action="/login" method="POST" class="">
-            <div class="input-group">
-                <label for="username">Username</label>
-                <input type="text" id="username" name="username" required value="user">
-            </div>
-            <div class="input-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" required value="1">
-            </div>
-            <button type="submit" class="auth-btn">Login</button>
-            <p>Don't have an account? <a href="#">Sign up</a></p>
-        </form>
-    </div>
+            <form action="/login" method="POST" class="">
+                <div class="input-group">
+                    <label for="username">Username</label>
+                    <input type="text" id="username" name="username" required value="user">
+                </div>
+                <div class="input-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" required value="1">
+                </div>
+                <button type="submit" class="auth-btn">Login</button>
+                <p>Don't have an account? <a href="#">Sign up</a></p>
+            </form>
+        </div>
 
-    <div class="about-project">
-        <label class="f5">Образовательный проект по изучению японского языка</label>
-        <label class="f5">v 0.0.1</label>
+        <div class="about-project">
+            <label class="f5">Образовательный проект по изучению японского языка</label>
+            <label class="f5">v 0.0.1</label>
+        </div>
     </div>
 </div>
 
