--- a/Nihongo Nexus/src/main/resources/templates/auth.html
+++ b/Nihongo Nexus/src/main/resources/templates/auth.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Authentication | Nihongo Nexus</title>
-    <link rel="stylesheet" href=/css/main.css>
-    <link rel="stylesheet" href=/css/font.css>
+    <th:block th:replace="fragments/head :: head"></th:block>
+
     <link rel="stylesheet" href=/css/pages/login.sign.css>
     <link rel="stylesheet" href=/css/buttons.css>
     <link rel="stylesheet" href=/css/forms.css>
@@ -41,6 +38,9 @@
         </div>
     </div>
 </div>
+
+<footer th:replace="fragments/footer :: footer"></footer>
+
 
 </body>
 </html>
