A little page/style changes

--- a/Nihongo Nexus/src/main/resources/templates/galaxy.html
+++ b/Nihongo Nexus/src/main/resources/templates/galaxy.html
@@ -15,8 +15,10 @@
         <div class="star-systems-wrapper">
             <div class="star-system" data-status="open">
                 <img src="/img/system/system_test.png" alt="Star System 1" class="star-image">
-                <h2>Star System 1</h2>
-                <p>Description of Star System 1</p>
+                <div class="system-description">
+                    <h2>Star System 1</h2>
+                    <p>Description of Star System 1</p>
+                </div>
             </div>
             <div class="star-system" data-status="locked">
                 <img src="/img/system/system_test.png" alt="Star System 2" class="star-image">
@@ -25,8 +27,8 @@
             </div>
             <div class="star-system" data-status="locked">
                 <img src="/img/system/system_test.png" alt="Star System 3" class="star-image">
-                <h2>Star System 3</h2>
-                <p>Description of Star System 3</p>
+                <h2>Star System 2</h2>
+                <p>Description of Star System 2</p>
             </div>
         </div>
         <button class="prev-btn" onclick="prevSystem()">&#10094;</button>
