--- a/Nihongo Nexus/src/main/resources/static/css/main.css
+++ b/Nihongo Nexus/src/main/resources/static/css/main.css
@@ -86,11 +86,11 @@ a:hover {
 .bg .fog img {
     position: absolute;
     bottom: 0;
-    /* left: 50%; */
-    /* right: 50%; */
     max-width: 100%;
     animation: fog_effect calc(3s * var(--i)) ease-in infinite;
     background-color: #3993b200;
+    /*filter color*/
+    filter: sepia(1) saturate(1000%) hue-rotate(180deg) brightness(1.5) opacity(1);
 }
 @keyframes fog_effect {
     0% {
