--- a/Nihongo Nexus/src/main/resources/templates/auth.html
+++ b/Nihongo Nexus/src/main/resources/templates/auth.html
@@ -25,10 +25,11 @@
                 </div>
                 <div class="input-group">
                     <label for="password">Password</label>
-                    <input type="password" id="password" name="password" required value="1">
+                    <input type="password" id="password" name="password" required minlength="6" value="123456">
+                    <p>Пароль должен содержать минимум 6 символов</p>
                 </div>
                 <button type="submit" class="auth-btn">Login</button>
-                <p>Don't have an account? <a href="#">Sign up</a></p>
+                <p>Нет аккаунта? <a href="#">Создать!</a></p>
             </form>
         </div>
 
