--- a/Nihongo Nexus/src/main/resources/templates/fragments/menu.html
+++ b/Nihongo Nexus/src/main/resources/templates/fragments/menu.html
@@ -11,6 +11,7 @@
         <a class="locked" href="#home">События</a>
         <a class="locked" href="#profile">Сезон</a>
         <a class="" href="/galaxy">Галактика</a>
+        <a class="" href="/explore">Галактика</a>
         <a class="locked" href="#settings">Настройки</a>
         <a href="/logout">Выход</a>
     </nav>
