--- a/Nihongo Nexus/src/main/resources/static/css/buttons.css
+++ b/Nihongo Nexus/src/main/resources/static/css/buttons.css
@@ -12,3 +12,121 @@
 .auth-btn:hover {
     background-color: #0056b3;
 }
+
+/* NEON BTN*/
+
+.neon-btn {
+    position: relative;
+    background: #3895a5db;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    border: none;
+    letter-spacing: 0.1rem;
+    font-size: 1rem;
+    padding: 1rem 3rem;
+    transition: 0.2s;
+    cursor: pointer;
+}
+
+.neon-btn:hover {
+    /*letter-spacing: 0.2rem;*/
+    /*padding: 1.1rem 3.1rem;*/
+    background: var(--clr);
+    color: var(--clr);
+    /* box-shadow: 0 0 35px var(--clr); */
+    animation: box 3s infinite;
+}
+
+.neon-btn::before {
+    content: "";
+    position: absolute;
+    inset: 2px;
+    background: #203349d9;
+}
+
+.neon-btn span {
+    position: relative;
+    z-index: 1;
+}
+.neon-btn i {
+    position: absolute;
+    inset: 0;
+    display: block;
+}
+
+.neon-btn i::before {
+    content: "";
+    position: absolute;
+    width: 10px;
+    height: 2px;
+    left: 80%;
+    top: -2px;
+    border: 2px solid var(--clr);
+    background: #272822;
+    transition: 0.2s;
+}
+
+.neon-btn:hover i::before {
+    width: 15px;
+    left: 20%;
+    animation: move 3s infinite;
+}
+
+.neon-btn i::after {
+    content: "";
+    position: absolute;
+    width: 10px;
+    height: 2px;
+    left: 20%;
+    bottom: -2px;
+    border: 2px solid var(--clr);
+    background: #272822;
+    transition: 0.2s;
+}
+
+.neon-btn:hover i::after {
+    width: 15px;
+    left: 80%;
+    animation: move 3s infinite;
+}
+
+@keyframes box {
+    0% {
+        box-shadow: #27272c;
+    }
+    50% {
+        box-shadow: 0 0 25px var(--clr);
+    }
+    100% {
+        box-shadow: #27272c;
+    }
+}
+
+/* --- */
+
+/* SIMPLE BTN */
+
+.simple-btn {
+    padding:5px;
+    background-color: #3C6293;
+}
+
+/* --- */
+
+
+/* CMD BTN*/
+
+.cmd-btn {
+    background-color: #092b63b8;
+    border-radius: 10px;
+    padding: 10px;
+    border: 1px;
+    color: white;
+}
+
+.cmd-btn:hover {
+    background-color: rgba(7, 67, 159, 0.72);
+}
+
+/* --- */
