--- a/Nihongo Nexus/src/main/resources/templates/explore_system.html
+++ b/Nihongo Nexus/src/main/resources/templates/explore_system.html
@@ -20,6 +20,7 @@
             <div class="">
                 <h1 class="f3">Planet GigaChad</h1>
                 <h1 class="f3">Исследовано: 7 локаций</h1><h1 class="f3">Разгадоно текстов: 13</h1>
+                <a class="neon-btn" href="/explore">Перейти</a>
             </div>
             <div class="line"></div>
         </div>
