--- a/Nihongo Nexus/src/main/resources/templates/fragments/head.html
+++ b/Nihongo Nexus/src/main/resources/templates/fragments/head.html
@@ -7,4 +7,5 @@
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/font.css">
     <link rel="stylesheet" href="/css/menu.css">
+    <link rel="stylesheet" href="/css/buttons.css">
 </th:block>
